fix compile ARM flags

--- a/test/Makefile
+++ b/test/Makefile
@@ -9,7 +9,7 @@
 
 #all: s52glx        # GLX & OGR
 #all: s52eglx       # EGL & GLX & OGR
-#all: s52eglarm     # DEPRECATE - EGL & GLES2 & ARM/Android & OGR  S52_USE_ADRENO for Nexus & S52_USE_TEGRA2 for Xoom
+#all: s52eglarm     # EGL & GLES2 & ARM/Android & OGR - S52_USE_ADRENO for Nexus / S52_USE_TEGRA2 for Xoom
 #all: s52gv         # GV  (OpenEV  / GTK )
 #all: s52gv2        # GV2 (OpenEV2 / GTK2)  broken
 #all: s52gtk2       # GTK2 & OGR
@@ -49,8 +49,8 @@ LIBS52_HOME = ..
 s52eglarm : DROIDTOOLCHAINROOT = /home/sduclos/dev/prog/Android/dev/android-19-toolchain
 s52eglarm : DROIDINCLUDE       = $(DROIDTOOLCHAINROOT)/sysroot/usr/include
 s52eglarm : DROIDLIBS          = $(DROIDTOOLCHAINROOT)/sysroot/usr/lib
-s52eglarm : CC                 = $(DROIDTOOLCHAINROOT)/bin/arm-linux-androideabi-gcc -g -fPIC -mthumb -std=c99
-s52eglarm : CXX                = $(DROIDTOOLCHAINROOT)/bin/arm-linux-androideabi-g++ -g -fPIC -mthumb
+s52eglarm : CC                 = $(DROIDTOOLCHAINROOT)/bin/arm-linux-androideabi-gcc -g -O0 -fPIC -mthumb -march=armv7-a -mfloat-abi=softfp -mfpu=vfpv3-d16 -std=c99
+s52eglarm : CXX                = $(DROIDTOOLCHAINROOT)/bin/arm-linux-androideabi-g++ -g -O0 -fPIC -mthumb -march=armv7-a -mfloat-abi=softfp -mfpu=vfpv3-d16
 s52eglarm : STRIP              = $(DROIDTOOLCHAINROOT)/bin/arm-linux-androideabi-strip -s
 
 s52eglarm : S52DROIDINC        = $(HOME)/dev/gis/openev-cvs/contrib/S52/test/android/dist/system/include
@@ -82,14 +82,14 @@ s52glx:     CFLAGS = `pkg-config --cflags glib-2.0` -I.. -DS52_USE_GTK2 -DS52_US
 # -DS52_USE_AFGLOW    - need symbole in PLAUX_00.DAI
 # -DS52_USE_WORLD     - load world shapefile
 # -DS52_USE_SOCK      - in s52ais.c when build with S52AIS_STANDALONE use socket to call libS52
-s52eglx:    CFLAGS =  -I.. -I. `pkg-config --cflags egl glib-2.0 gthread-2.0 gobject-2.0 libgps` \
+s52eglx:    CFLAGS =  -I.. -I. `pkg-config --cflags egl glib-2.0 gthread-2.0 gobject-2.0 libgps`   \
                       -DS52_USE_DOTPITCH -DS52_USE_EGL -DS52_USE_GLES2 -DS52_USE_AFGLOW -DUSE_AIS
 
 # same as s52eglx, but "gtk+-2.0" is added - no AIS
 s52gtk2egl: CFLAGS =  -I.. -I. `pkg-config --cflags egl glib-2.0 gthread-2.0 gobject-2.0 gtk+-2.0` \
                       -DS52_USE_DOTPITCH -DS52_USE_EGL -DS52_USE_GLES2
 # same as s52eglx, but "gtk+-3.0" is added
-s52gtk3egl: CFLAGS =  -I.. -I. `pkg-config --cflags egl glib-2.0 gthread-2.0 gobject-2.0 gtk+-3.0 libgps` \
+s52gtk3egl: CFLAGS =  -I.. -I. `pkg-config --cflags egl glib-2.0 gthread-2.0 gobject-2.0 gtk+-3.0` \
                       -DS52_USE_DOTPITCH -DS52_USE_SOCK -DS52_USE_AFGLOW -DS52_USE_EGL -DS52_USE_GLES2
 
 # -DS52_USE_TEGRA2 (Xoom)
@@ -144,7 +144,7 @@ s52eglx   : LIBS    = `pkg-config --libs egl glib-2.0 gio-2.0 gthread-2.0 gobjec
 s52gtk2egl: LIBS    = `pkg-config --libs egl glib-2.0 gio-2.0 gthread-2.0 gobject-2.0 gtk+-2.0` $(S52_LIBS)
 
 # same as s52eglx, add "gtk+-3.0"
-s52gtk3egl: LIBS    = `pkg-config --libs egl glib-2.0 gio-2.0 gthread-2.0 gobject-2.0 gtk+-3.0 libgps` $(S52_LIBS)
+s52gtk3egl: LIBS    = `pkg-config --libs egl glib-2.0 gio-2.0 gthread-2.0 gobject-2.0 gtk+-3.0` $(S52_LIBS)
 
 s52eglarm : LIBS    = $(S52DROIDLIBS)/libgio-2.0.a                 \
                       $(S52DROIDLIBS)/libgobject-2.0.a             \
@@ -153,7 +153,7 @@ s52eglarm : LIBS    = $(S52DROIDLIBS)/libgio-2.0.a                 \
                       $(S52DROIDLIBS)/libgthread-2.0.a             \
                       $(S52DROIDLIBS)/libiconv.a                   \
                       $(S52DROIDLIBS)/libgps.a                     \
-                       -L$(DROIDLIBS) -llog
+                       -L$(DROIDLIBS) -llog -lm
 
 
 ############### build ##############################
@@ -171,9 +171,9 @@ s52eglx: s52egl.c s52ais.c
 s52gtk2egl: s52gtk2egl.c
 	$(CC) $(CFLAGS) s52gtk2egl.c $(LIBS) -o $@
 
-s52gtk3egl: s52gtk3egl.c
+s52gtk3egl: s52gtk3egl.c s52ais.c
 	$(CC) $(CFLAGS) s52gtk3egl.c $(LIBS) -o $@
-	$(CC) $(CFLAGS) -DS52AIS_STANDALONE s52ais.c $(LIBS) -o s52ais
+	$(CC) $(CFLAGS) -DS52AIS_STANDALONE s52ais.c $(LIBS) `pkg-config --cflags --libs libgps` -o s52ais
 
 
 
@@ -273,12 +273,13 @@ sl4agps: sl4agps.c sl4agps.cfg android/dist/sdcard/s52droid/UI.xml
 
 # android 4.1
 # adb shell chmod 755 /data/media/s52droid/bin/s52ais
+#adb shell su -c 'chmod 755 /mnt/shell/emulated/0/s52droid/bin/s52ais'  
+# /data/media/0/s52droid/bin/s52ais'
 s52ais: s52ais.c
-	$(CXX) $(CFLAGS) -DS52AIS_STANDALONE s52ais.c  $(LIBS) -o s52ais
+	$(CC) $(CFLAGS) -DS52AIS_STANDALONE s52ais.c  $(LIBS) -o s52ais
 	$(STRIP)  s52ais
 	cp        s52ais    android/dist/sdcard/s52droid/bin
 	adb push  s52ais    /sdcard/s52droid/bin
-	adb shell su -c 'chmod 755 /data/media/0/s52droid/bin/s52ais'
 
 s52eglarm: s52ais
 #s52eglarm: s52ais sl4agps
